# mnn-tts

./: CMakeLists.txt  README.md  export.py
include/: tts.hpp
src/: tts.cpp  tts_demo.cpp  ttsconfig.hpp  zhg2p.cpp  zhg2p.hpp
src/3rd_include/cpp-pinyin/: ToFinal.hpp
src/3rd_include/zh_normalization/: TextNormalization.h  TextNormalizer.h  chinese_converter.h  chronology.h  constants.h  num.h  phonecode.h  quantifier.h
src/cpp-pinyin/: ChineseG2p.cpp  DictUtil.cpp  ManToneUtil.cpp
src/zh_normalization/: TextNormalization.cpp  TextNormalizer.cpp  chinese_converter.cpp  chronology.cpp  constants.cpp  num.cpp  phonecode.cpp  quantifier.cpp
